--- a/effects-benchmarks.cabal
+++ b/effects-benchmarks.cabal
@@ -16,15 +16,6 @@ common shared
   ghc-options:         -Wall -Werror -O2 -flate-specialise
   build-depends:       base >= 4.7 && < 5
 
-library benchmark-signatures
-  import:              shared
-  hs-source-dirs:      src
-  signatures:          Bench.Signature.Stateful
-                     , Bench.Signature.StatefulExcept
-                     , Bench.Signature.HTTP
-  exposed-modules:     Bench.Countdown
-                     , Bench.HTTP
-
 library instances-for-shallow
   import:          shared
   hs-source-dirs:  instances
@@ -38,7 +29,7 @@ library instances-for-exteff
   exposed-modules: ExtEff.Stateful
                  , ExtEff.StatefulExcept
                  , ExtEff.HTTP
-  build-depends:   extensible-effects ^>= 5.0.0.1
+  build-depends:   extensible-effects
 
 library instances-for-mtl
   import:          shared
@@ -46,7 +37,7 @@ library instances-for-mtl
   exposed-modules: MTL.Stateful
                  , MTL.StatefulExcept
                  , MTL.HTTP
-  build-depends:   mtl ^>= 2.2.2
+  build-depends:   mtl
 
 library instances-for-fused-effects
   import:          shared
@@ -62,7 +53,7 @@ library instances-for-freer-simple
   exposed-modules: Freer.Stateful
                  , Freer.StatefulExcept
                  , Freer.HTTP
-  build-depends:   freer-simple ^>= 1.2.1
+  build-depends:   freer-simple
 
 library instances-for-polysemy
   import:          shared
@@ -70,14 +61,13 @@ library instances-for-polysemy
   exposed-modules: Poly.Stateful
                  , Poly.StatefulExcept
                  , Poly.HTTP
-  build-depends:   polysemy ^>= 1.2
+  build-depends:   polysemy
 
 benchmark effects-benchmarks
   import:         shared
   type:           exitcode-stdio-1.0
   hs-source-dirs: src
-  build-depends:  benchmark-signatures
-                , instances-for-mtl
+  build-depends:  instances-for-mtl
                 , instances-for-fused-effects
                 , instances-for-freer-simple
                 , instances-for-polysemy
@@ -86,11 +76,4 @@ benchmark effects-benchmarks
                 , gauge
                 , weigh
                 , polysemy
-                , polysemy-plugin
   main-is:        Main.hs
-  mixins:         benchmark-signatures (Bench.Countdown as MTL.Countdown, Bench.HTTP as MTL.HTTPM) requires (Bench.Signature.Stateful as MTL.Stateful, Bench.Signature.StatefulExcept as MTL.StatefulExcept, Bench.Signature.HTTP as MTL.HTTP)
-                , benchmark-signatures (Bench.Countdown as Fused.Countdown, Bench.HTTP as Fused.HTTPM) requires (Bench.Signature.Stateful as Fused.Stateful, Bench.Signature.StatefulExcept as Fused.StatefulExcept, Bench.Signature.HTTP as Fused.HTTP)
-                , benchmark-signatures (Bench.Countdown as Simple.Countdown, Bench.HTTP as Simple.HTTPM) requires (Bench.Signature.Stateful as Freer.Stateful, Bench.Signature.StatefulExcept as Freer.StatefulExcept, Bench.Signature.HTTP as Freer.HTTP)
-                , benchmark-signatures (Bench.Countdown as Shallow.Countdown, Bench.HTTP as Shallow.HTTPM) requires (Bench.Signature.Stateful as Shallow.Stateful, Bench.Signature.StatefulExcept as Shallow.StatefulExcept, Bench.Signature.HTTP as Shallow.HTTP)
-                , benchmark-signatures (Bench.Countdown as Poly.Countdown, Bench.HTTP as Poly.HTTPM) requires (Bench.Signature.Stateful as Poly.Stateful, Bench.Signature.StatefulExcept as Poly.StatefulExcept, Bench.Signature.HTTP as Poly.HTTP)
-                , benchmark-signatures (Bench.Countdown as ExtEff.Countdown, Bench.HTTP as ExtEff.HTTPM) requires (Bench.Signature.Stateful as ExtEff.Stateful, Bench.Signature.StatefulExcept as ExtEff.StatefulExcept, Bench.Signature.HTTP as ExtEff.HTTP)
